@@ -33,6 +33,16 @@ JUnit Plafform 1.6 (https://junit.org/junit5/docs/5.6.0/release-notes/index.html
 (a, b, _, c) = row
 ----
 
+- Multi-variable data pipes now also support nesting.
++
+[source,groovy]
+----
+[a, [_, b]] << [
+  [1, [5, 1]],
+  [2, [5, 2]]
+]
+----
+
 == 2.0-M2 (2020-02-10)
 
 === Groovy-3.0 Support
